rozcesti, na moste, plaminek a ventilator

--- a/WikiParez/Views/Home/New.cshtml
+++ b/WikiParez/Views/Home/New.cshtml
@@ -6,6 +6,7 @@
     <h1 class="display-4">Vítejte na Pařez Wiki!</h1>
     <h3>Nejnovější místnosti: </h3>
     <ul>
+        <li>#496 - 06/08/25 <a href="mi_ventilator">Ventilátor</a></li>
         <li>#495 - 28/07/25 <a href="mi_trh">Trh</a></li>
         <li>#494 - 28/07/25 <a href="mi_padaci_most">Padací Most</a></li>
         <li>#493 - 26/07/25 <a href="mi_meda">Méďa</a></li>
