fixed some link typos + adding metadatas to mi_vit_baudys and mi_helena_jaklova

--- a/WikiParez/Views/Home/TopMenu.cshtml
+++ b/WikiParez/Views/Home/TopMenu.cshtml
@@ -2,4 +2,10 @@
     <form method="get" action="/Top/Parezle">
         <button type="submit" class="btn btn-primary btn-lg">NEJ MÍSTNOSTI PRO PAŘEZLE</button>
     </form>
+    <form method="get" action="/Top/Largest">
+        <button type="submit" class="btn btn-primary btn-lg">NEJVĚTŠÍ MÍSTNOSTI</button>
+    </form>
+    <form method="get" action="/Top/Mostbordered">
+        <button type="submit" class="btn btn-primary btn-lg">MÍSTNOSTI S NEJVÍCE SOUSEDNÍMA MÍSTNOSTMA</button>
+    </form>
 </div>
