--- a/WikiParez/Views/Home/New.cshtml
+++ b/WikiParez/Views/Home/New.cshtml
@@ -6,6 +6,7 @@
     <h1 class="display-4">Vítejte na Pařez Wiki!</h1>
     <h3>Nejnovější místnosti: </h3>
     <ul>
+        <li>#498 - 08/08/25 <a href="mi_rimsa">Římsa</a></li>
         <li>#497 - 07/08/25 <a href="mi_basta">Bašta</a></li>
         <li>#496 - 06/08/25 <a href="mi_ventilator">Ventilátor</a></li>
         <li>#495 - 28/07/25 <a href="mi_trh">Trh</a></li>
