nove mistnosti konecne zatim zadne clanky ale to prijde ver

--- a/WikiParez/Views/Home/New.cshtml
+++ b/WikiParez/Views/Home/New.cshtml
@@ -6,6 +6,17 @@
     <h1 class="display-4">Vítejte na Pařez Wiki!</h1>
     <h3>Nejnovější místnosti: </h3>
     <ul>
+        <li>#509 - 17/08/25 <a href="mi_kukatko"></a>Kukátko</li>
+        <li>#508 - 17/08/25 <a href="mi_dalka"></a>Dálka</li>
+        <li>#507 - 17/08/25 <a href="mi_mokro"></a>Mokro</li>
+        <li>#506 - 17/08/25 <a href="mi_vicko"></a>Víčko</li>
+        <li>#505 - 17/08/25 <a href="mi_zub"></a>Zub</li>
+        <li>#504 - 17/08/25 <a href="mi_dno"></a>Dno</li>
+        <li>#503 - 17/08/25 <a href="mi_retez"></a>Řetěz</li>
+        <li>#502 - 17/08/25 <a href="mi_sucho"></a>Sucho</li>
+        <li>#501 - 17/08/25 <a href="mi_pozemek"></a>Pozemek</li>
+        <li>#500 - 17/08/25 <a href="mi_lomena_cara"></a>Lomená Čára</li>
+        <li>#499 - 17/08/25 <a href="mi_pit_stop">Pit Stop</a></li>
         <li>#498 - 08/08/25 <a href="mi_rimsa">Římsa</a></li>
         <li>#497 - 07/08/25 <a href="mi_basta">Bašta</a></li>
         <li>#496 - 06/08/25 <a href="mi_ventilator">Ventilátor</a></li>
