moderator, predzahradka, jzd, helena a pompeje

--- a/WikiParez/Views/Home/New.cshtml
+++ b/WikiParez/Views/Home/New.cshtml
@@ -6,17 +6,32 @@
     <h1 class="display-4">Vítejte na Pařez Wiki!</h1>
     <h3>Nejnovější místnosti: </h3>
     <ul>
-        <li>#509 - 17/08/25 <a href="mi_kukatko"></a>Kukátko</li>
-        <li>#508 - 17/08/25 <a href="mi_dalka"></a>Dálka</li>
-        <li>#507 - 17/08/25 <a href="mi_mokro"></a>Mokro</li>
-        <li>#506 - 17/08/25 <a href="mi_vicko"></a>Víčko</li>
-        <li>#505 - 17/08/25 <a href="mi_zub"></a>Zub</li>
-        <li>#504 - 17/08/25 <a href="mi_dno"></a>Dno</li>
-        <li>#503 - 17/08/25 <a href="mi_retez"></a>Řetěz</li>
-        <li>#502 - 17/08/25 <a href="mi_sucho"></a>Sucho</li>
-        <li>#501 - 17/08/25 <a href="mi_pozemek"></a>Pozemek</li>
-        <li>#500 - 17/08/25 <a href="mi_lomena_cara"></a>Lomená Čára</li>
-        <li>#499 - 17/08/25 <a href="mi_pit_stop">Pit Stop</a></li>
+        <li>#524 - 17/08/25 <a href="mi_prazce">Pražce</a></li>
+        <li>#523 - 17/08/25 <a href="mi_kaskada">Kaskáda</a></li>
+        <li>#522 - 17/08/25 <a href="mi_jitrocel">Jitrocel</a></li>
+        <li>#521 - 17/08/25 <a href="mi_ctyrlistek">Čtyřlístek</a></li>
+        <li>#520 - 17/08/25 <a href="mi_hindukus">Hindúkuš</a></li>
+        <li>#519 - 17/08/25 <a href="mi_kombucha">Kombucha</a></li>
+        <li>#518 - 17/08/25 <a href="mi_druzstvo">Družstvo</a></li>
+        <li>#517 - 17/08/25 <a href="mi_salon">Salón</a></li>
+        <li>#516 - 17/08/25 <a href="mi_predsalonek">Předsalónek</a></li>
+        <li>#515 - 17/08/25 <a href="mi_kadere">Kadeře</a></li>
+        <li>#514 - 17/08/25 <a href="mi_konska_sila">Koňská Síla</a></li>
+        <li>#513 - 17/08/25 <a href="mi_predzahradka">Předzahrádka</a></li>
+        <li>#512 - 17/08/25 <a href="mm_moderator_2">Redirecting</a></li>
+        <li>#511 - 17/08/25 <a href="mm_moderator_1">Redirecting</a></li>
+        <li>#510 - 17/08/25 <a href="mi_moderator">Moderátor</a></li>
+        <li>#509 - 16/08/25 <a href="mi_kukatko"></a>Kukátko</li>
+        <li>#508 - 16/08/25 <a href="mi_dalka"></a>Dálka</li>
+        <li>#507 - 16/08/25 <a href="mi_mokro"></a>Mokro</li>
+        <li>#506 - 16/08/25 <a href="mi_vicko"></a>Víčko</li>
+        <li>#505 - 16/08/25 <a href="mi_zub"></a>Zub</li>
+        <li>#504 - 16/08/25 <a href="mi_dno"></a>Dno</li>
+        <li>#503 - 16/08/25 <a href="mi_retez"></a>Řetěz</li>
+        <li>#502 - 16/08/25 <a href="mi_sucho"></a>Sucho</li>
+        <li>#501 - 16/08/25 <a href="mi_pozemek"></a>Pozemek</li>
+        <li>#500 - 16/08/25 <a href="mi_lomena_cara"></a>Lomená Čára</li>
+        <li>#499 - 16/08/25 <a href="mi_pit_stop">Pit Stop</a></li>
         <li>#498 - 08/08/25 <a href="mi_rimsa">Římsa</a></li>
         <li>#497 - 07/08/25 <a href="mi_basta">Bašta</a></li>
         <li>#496 - 06/08/25 <a href="mi_ventilator">Ventilátor</a></li>
