--- a/WikiParez/Views/Game/Parezle/Menu.cshtml
+++ b/WikiParez/Views/Game/Parezle/Menu.cshtml
@@ -5,4 +5,7 @@
     <form method="get" action="/Game/Parezle/Random">
         <button type="submit" class="btn btn-secondary btn-lg">Náhodný</button>
     </form>
+    <form method="get" action="/Game/Parezle/Custom">
+        <button type="submit" class="btn btn-secondary btn-lg">Vlastní</button>
+    </form>
 </div>
