--- a/WikiParez/Views/Home/New.cshtml
+++ b/WikiParez/Views/Home/New.cshtml
@@ -6,20 +6,33 @@
     <h1 class="display-4">Vítejte na Pařez Wiki!</h1>
     <h3>Nejnovější místnosti: </h3>
     <ul>
-        <li>#524 - 17/08/25 <a href="mi_prazce">Pražce</a></li>
-        <li>#523 - 17/08/25 <a href="mi_kaskada">Kaskáda</a></li>
-        <li>#522 - 17/08/25 <a href="mi_jitrocel">Jitrocel</a></li>
-        <li>#521 - 17/08/25 <a href="mi_ctyrlistek">Čtyřlístek</a></li>
-        <li>#520 - 17/08/25 <a href="mi_hindukus">Hindúkuš</a></li>
-        <li>#519 - 17/08/25 <a href="mi_kombucha">Kombucha</a></li>
-        <li>#518 - 17/08/25 <a href="mi_druzstvo">Družstvo</a></li>
-        <li>#517 - 17/08/25 <a href="mi_salon">Salón</a></li>
-        <li>#516 - 17/08/25 <a href="mi_predsalonek">Předsalónek</a></li>
-        <li>#515 - 17/08/25 <a href="mi_kadere">Kadeře</a></li>
-        <li>#514 - 17/08/25 <a href="mi_konska_sila">Koňská Síla</a></li>
-        <li>#513 - 17/08/25 <a href="mi_predzahradka">Předzahrádka</a></li>
-        <li>#512 - 17/08/25 <a href="mm_moderator_2">Redirecting</a></li>
-        <li>#511 - 17/08/25 <a href="mm_moderator_1">Redirecting</a></li>
+        <li>#537 - 31/08/25 <a href="mi_kurnik">Kurník</a></li>
+        <li>#536 - 31/08/25 <a href="mi_u_zabradli">U Zábradlí</a></li>
+        <li>#535 - 31/08/25 <a href="mi_jost">Jošt</a></li>
+        <li>#534 - 31/08/25 <a href="mi_mezi_okny">Mezi Okny</a></li>
+        <li>#533 - 31/08/25 <a href="mi_pod_drnem">Pod Drnem</a></li>
+        <li>#532 - 31/08/25 <a href="mi_sleh">Šleh</a></li>
+        <li>#531 - 31/08/25 <a href="mi_strom">Strom</a></li>
+        <li>#530 - 31/08/25 <a href="mi_flam">Flám</a></li>
+        <li>#529 - 31/08/25 <a href="mi_oknilok">Oknilok</a></li>
+        <li>#528 - 31/08/25 <a href="mi_agama">Agama</a></li>
+        <li>#527 - 31/08/25 <a href="mi_mez">Mez</a></li>
+        <li>#526 - 31/08/25 <a href="mi_amalgam">Amalgám</a></li>
+        <li>#525 - 31/08/25 <a href="mi_atrapa">Atrapa</a></li>
+        <li>#524 - 31/08/25 <a href="mi_plomba">Plomba</a></li>
+        <li>#523 - 31/08/25 <a href="mi_past">Past</a></li>
+        <li>#522 - 17/08/25 <a href="mi_prazce">Pražce</a></li>
+        <li>#521 - 17/08/25 <a href="mi_kaskada">Kaskáda</a></li>
+        <li>#520 - 17/08/25 <a href="mi_jitrocel">Jitrocel</a></li>
+        <li>#519 - 17/08/25 <a href="mi_ctyrlistek">Čtyřlístek</a></li>
+        <li>#518 - 17/08/25 <a href="mi_hindukus">Hindúkuš</a></li>
+        <li>#517 - 17/08/25 <a href="mi_kombucha">Kombucha</a></li>
+        <li>#516 - 17/08/25 <a href="mi_druzstvo">Družstvo</a></li>
+        <li>#515 - 17/08/25 <a href="mi_salon">Salón</a></li>
+        <li>#514 - 17/08/25 <a href="mi_predsalonek">Předsalónek</a></li>
+        <li>#513 - 17/08/25 <a href="mi_kadere">Kadeře</a></li>
+        <li>#512 - 17/08/25 <a href="mi_konska_sila">Koňská Síla</a></li>
+        <li>#511 - 17/08/25 <a href="mi_predzahradka">Předzahrádka</a></li>
         <li>#510 - 17/08/25 <a href="mi_moderator">Moderátor</a></li>
         <li>#509 - 16/08/25 <a href="mi_kukatko"></a>Kukátko</li>
         <li>#508 - 16/08/25 <a href="mi_dalka"></a>Dálka</li>
