--- a/WikiParez/Views/Home/New.cshtml
+++ b/WikiParez/Views/Home/New.cshtml
@@ -6,6 +6,7 @@
     <h1 class="display-4">Vítejte na Pařez Wiki!</h1>
     <h3>Nejnovější místnosti: </h3>
     <ul>
+        <li>#538 - 01/09/25 <a href="mi_gekon">Gekon</a></li>
         <li>#537 - 31/08/25 <a href="mi_kurnik">Kurník</a></li>
         <li>#536 - 31/08/25 <a href="mi_u_zabradli">U Zábradlí</a></li>
         <li>#535 - 31/08/25 <a href="mi_jost">Jošt</a></li>
