--- a/WikiParez/Views/Home/New.cshtml
+++ b/WikiParez/Views/Home/New.cshtml
@@ -6,6 +6,15 @@
     <h1 class="display-4">Vítejte na Pařez Wiki!</h1>
     <h3>Nejnovější místnosti: </h3>
     <ul>
+        <li>#547 - 06/09/25 <a href="mi_ona">Ona</a></li>
+        <li>#546 - 06/09/25 <a href="mi_on">On</a></li>
+        <li>#545 - 06/09/25 <a href="mi_privoz">Přívoz</a></li>
+        <li>#544 - 06/09/25 <a href="ct_duzina">Dužina</a></li>
+        <li>#543 - 06/09/25 <a href="mi_piskovna">Pískovna</a></li>
+        <li>#542 - 06/09/25 <a href="mi_chladic">Chladič</a></li>
+        <li>#541 - 06/09/25 <a href="mi_kapota">Kapota</a></li>
+        <li>#540 - 06/09/25 <a href="mi_karoserie">Karosérie</a></li>
+        <li>#539 - 06/09/25 <a href="mi_bezdomovec">Bezdomovec</a></li>
         <li>#538 - 01/09/25 <a href="mi_gekon">Gekon</a></li>
         <li>#537 - 31/08/25 <a href="mi_kurnik">Kurník</a></li>
         <li>#536 - 31/08/25 <a href="mi_u_zabradli">U Zábradlí</a></li>
