--- a/WikiParez/Views/Home/New.cshtml
+++ b/WikiParez/Views/Home/New.cshtml
@@ -6,10 +6,16 @@
     <h1 class="display-4">Vítejte na Pařez Wiki!</h1>
     <h3>Nejnovější místnosti: </h3>
     <ul>
-        <li>#547 - 06/09/25 <a href="mi_ona">Ona</a></li>
-        <li>#546 - 06/09/25 <a href="mi_on">On</a></li>
-        <li>#545 - 06/09/25 <a href="mi_privoz">Přívoz</a></li>
-        <li>#544 - 06/09/25 <a href="ct_duzina">Dužina</a></li>
+        <li>#553 - 07/09/25 <a href="mi_sklep">Sklep</a></li>
+        <li>#552 - 07/09/25 <a href="mi_lodenice">Loděnice</a></li>
+        <li>#551 - 07/09/25 <a href="mi_fabrika">Fabrika</a></li>
+        <li>#550 - 07/09/25 <a href="mi_koryto">Koryto</a></li>
+        <li>#549 - 07/09/25 <a href="mi_kravinec">Kravinec</a></li>
+        <li>#548 - 07/09/25 <a href="mi_oaza">Oáza</a></li>
+        <li>#547 - 07/09/25 <a href="mi_nastroj">Nástroj</a></li>
+        <li>#546 - 06/09/25 <a href="mi_ona">Ona</a></li>
+        <li>#545 - 06/09/25 <a href="mi_on">On</a></li>
+        <li>#544 - 06/09/25 <a href="mi_privoz">Přívoz</a></li>
         <li>#543 - 06/09/25 <a href="mi_piskovna">Pískovna</a></li>
         <li>#542 - 06/09/25 <a href="mi_chladic">Chladič</a></li>
         <li>#541 - 06/09/25 <a href="mi_kapota">Kapota</a></li>
@@ -79,7 +85,7 @@
         <li>#477 - 20/07/25 <a href="mi_hriva">Hříva</a></li>
         <li>#476 - 20/07/25 <a href="mi_hadice">Hadice</a></li>
         <li>#475 - 20/07/25 <a href="mi_hospoda">Hospoda</a></li>
-        <li>#474 - 19/07/25 <a href="/mi_podkrovi">Podkroví</a></li>
+        <li>#474 - 19/07/25 <a href="/mi_silaz">Siláž</a></li>
         <li>#473 - 19/07/25 <a href="/mi_bazar">Bazar</a></li>
         <li>#472 - 18/07/25 <a href="/mi_orisek">Oříšek</a></li>
         <li>#471 - 18/07/25 <a href="/mi_motor">Motor</a></li>
