nove mistnosti daleko na severu je gronska zem

--- a/WikiParez/Views/Home/New.cshtml
+++ b/WikiParez/Views/Home/New.cshtml
@@ -6,6 +6,10 @@
     <h1 class="display-4">Vítejte na Pařez Wiki!</h1>
     <h3>Nejnovější místnosti: </h3>
     <ul>
+        <li>#554 - 13/09/25 <a href="mi_slouporadi">Sloupořadí</a></li>
+        <li>#553 - 13/09/25 <a href="mi_papir">Papír</a></li>
+        <li>#552 - 13/09/25 <a href="mi_drevnik">Dřevník</a></li>
+        <li>#551 - 13/09/25 <a href="mi_asfaltka">Asfaltka</a></li>
         <li>#550 - 07/09/25 <a href="mi_sklep">Sklep</a></li>
         <li>#549 - 07/09/25 <a href="mi_lodenice">Loděnice</a></li>
         <li>#548 - 07/09/25 <a href="mi_fabrika">Fabrika</a></li>
