--- a/WikiParez/Views/Home/New.cshtml
+++ b/WikiParez/Views/Home/New.cshtml
@@ -6,6 +6,13 @@
     <h1 class="display-4">Vítejte na Pařez Wiki!</h1>
     <h3>Nejnovější místnosti: </h3>
     <ul>
+        <li>#561 - 14/09/25 <a href="mi_naplavka">Náplavka</a></li>
+        <li>#560 - 14/09/25 <a href="mi_bidet">Bidet</a></li>
+        <li>#559 - 14/09/25 <a href="mi_splet">Spleť</a></li>
+        <li>#558 - 14/09/25 <a href="mi_najezd">Nájezd</a></li>
+        <li>#557 - 14/09/25 <a href="mi_technicka_mistnost">Technická Místnost</a></li>
+        <li>#556 - 14/09/25 <a href="mi_vzduchotechinka">Vzduchotechnika</a></li>
+        <li>#555 - 14/09/25 <a href="mi_baterie">Baterie</a></li>
         <li>#554 - 13/09/25 <a href="mi_slouporadi">Sloupořadí</a></li>
         <li>#553 - 13/09/25 <a href="mi_papir">Papír</a></li>
         <li>#552 - 13/09/25 <a href="mi_drevnik">Dřevník</a></li>
