--- a/WikiParez/Views/Home/New.cshtml
+++ b/WikiParez/Views/Home/New.cshtml
@@ -6,10 +6,13 @@
     <h1 class="display-4">Vítejte na Pařez Wiki!</h1>
     <h3>Nejnovější místnosti: </h3>
     <ul>
-        <li>#565 - 16/12/25 <a href="mi_haj">Háj</a></li>
-        <li>#564 - 16/12/25 <a href="mi_hnojnik">Hnojník</a></li>
-        <li>#563 - 16/12/25 <a href="mi_brambora">Brambora</a></li>
-        <li>#562 - 16/12/25 <a href="mi_zemlianka">Zemlianka</a></li>
+        <li>#568 - 16/12/25 <a href="mi_haj">Háj</a></li>
+        <li>#567 - 16/12/25 <a href="mi_hnojnik">Hnojník</a></li>
+        <li>#566 - 16/12/25 <a href="mi_brambora">Brambora</a></li>
+        <li>#565 - 16/12/25 <a href="mi_zemlianka">Zemlianka</a></li>
+        <li>#564 - 22/09/25 <a href="mi_mechenice">Měchenice</a></li>
+        <li>#563 - 22/09/25 <a href="mi_uv">UV</a></li>
+        <li>#562 - 22/09/25 <a href="mi_zarizeni">Zařízení</a></li>
         <li>#561 - 14/09/25 <a href="mi_naplavka">Náplavka</a></li>
         <li>#560 - 14/09/25 <a href="mi_bidet">Bidet</a></li>
         <li>#559 - 14/09/25 <a href="mi_splet">Spleť</a></li>
